# libsmtp

libsmtp/: API  CHANGES  ChangeLog  INSTALL  Makefile  Makefile.in  README  TODO  config.h  config.h.in  configure  configure.in  libsmtp-connection.c  libsmtp.c  libsmtp.h  libsmtp_error.c  libsmtp_int.h  testapp.c  testapp2.c  uclinux-patch
libsmtp/base64/: Makefile  base64  base64.c
libsmtp/doc/: API
libsmtp/include/: libsmtp.h  libsmtp_mime.h
libsmtp/mime/: Makefile.in  base64.c  comm.c  libsmtp_mime.c  mimetest.c  multiparttest.c  parts.c  quoted.c
libsmtp/smtp/: Makefile  Makefile.in  libsmtp_comm.c  libsmtp_connection.c  libsmtp_data.c  libsmtp_error.c  testapp.c
libsmtp/src/: Makefile.in  libsmtp.h  libsmtp_comm.c  libsmtp_connection.c  libsmtp_data.c  libsmtp_error.c  libsmtp_mime.c  libsmtp_mime.h  testapp.c
