dnl Process this file with autoconf to produce a configure script.
AC_INIT(confdefs.h)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
dnl Replace `main' with a function in -lglib:
AC_CHECK_LIB(glib, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(gethostname socket strstr)

AC_OUTPUT(base64/Makefile src/Makefile Makefile)
